# simple_py_project

./: README.md  pyproject.toml
simple_py_project/: app.py
tests/: test.py
