[tool.poetry]
name = "simple_py_project"
version = "0.1.0"
description = ""
authors = ["Alexander <aleka_alexander@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.isort]
profile = "black"
src_paths = ["simple_py_project", "tests"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
